test/parsing/ferguson/reserved-int.good
reserved-int.chpl:1: error: attempt to redefine reserved type 'int'
reserved-int.chpl:3: error: attempt to redefine reserved type 'int'
reserved-int.chpl:6: error: attempt to redefine reserved type 'int'
reserved-int.chpl:7: error: attempt to redefine reserved type 'int'
reserved-int.chpl:10: error: attempt to redefine reserved type 'int'
reserved-int.chpl:12: error: attempt to redefine reserved type 'int'
reserved-int.chpl:17: error: attempt to redefine reserved type 'int'
